# pick-and-place

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  docker-compose.wsl.yml  docker-compose.yml  requirements.in  requirements.txt
autobots_calibration/: CMakeLists.txt  README.md  package.xml  requirements.in  requirements.txt
autobots_calibration/launch/: aruco_gazebo_harness.launch  demo.launch  spawn_aruco_tile.launch
autobots_calibration/models/aruco_tile/: description.sdf
autobots_calibration/models/aruco_tile/materials/scripts/: grid.material
autobots_calibration/msg/: CameraStatus.msg
autobots_calibration/script/: aruco_gazebo_harness.py  calibrate_camera.py  stream_camera.py
autobots_calibration/tests/: conftest.py  test_aruco_gazebo_harness.py  test_aruco_gazebo_harness.test  test_aruco_tile_model.py  test_aruco_tile_model.test  test_calibrate_camera.py
autobots_handy_simulation/: CMakeLists.txt  README.md
autobots_handy_simulation/launch/: demo.launch  handy_moveit.launch  simple.launch
autobots_handy_simulation/script/: spawn_random_objects.py
autobots_realsense2_description/: CMakeLists.txt  README.md  package.xml
autobots_realsense2_description/launch/: d435_camera_model.launch
autobots_realsense2_description/tests/: test_d435_camera_model.test
autobots_realsense2_description/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  d435_camera.urdf.xacro
docker/: Dockerfile  Dockerfile.noetic
ros/autobots_calibration/: README.md  package.xml  requirements.txt
ros/autobots_calibration/launch/: calibrate_camera.launch  demo.launch
ros/autobots_calibration/models/aruco_tile/: description.sdf
ros/autobots_calibration/msg/: CameraExtrinsics.msg
ros/autobots_calibration/script/: aruco_gazebo_harness.py  calibrate_camera.py  generate_aruco_tile.py  stream_camera.py
ros/autobots_calibration/tests/: test_aruco_gazebo_harness.py  test_aruco_tile_model.py  test_calibrate_camera.py  test_calibrate_camera.test
ros/autobots_handy_simulation/: package.xml
ros/autobots_handy_simulation/launch/: demo.launch  gazebo.launch  rviz.launch
ros/autobots_handy_simulation/rviz/: camera.rviz
ros/autobots_handy_simulation/script/: moveit_gazebo_model.py  query_model_poses.py  select_keypoint.py  spawn_random_objects.py
ros/autobots_realsense2_description/launch/: d435_camera_model.launch
ros/autobots_realsense2_description/rviz/: camera.rviz
ros/autobots_realsense2_description/tests/: test_d435_camera_model.py  test_d435_camera_model.test  utils.py
ros/autobots_realsense2_description/urdf/: _d435.gazebo.xacro
