<?xml version="1.0" ?>
<package format="2">
  <name>autobots_calibration</name>
  <version>0.0.0</version>
  <description>Package for camera calibration</description>
  <maintainer email="acmiyaguchi@gatech.edu">Anthony Miyaguchi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>ros_pytest</test_depend>
</package>
