<?xml version="1.0" ?>
<package format="2">
  <name>autobots_realsense2_description</name>
  <version>0.0.0</version>
  <description>Custom realsense2 description</description>
  <maintainer email="acmiyaguchi@gatech.edu">Anthony Miyaguchi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>xarcro</exec_depend>

  <test_depend>cv_bridge</test_depend>
  <test_depend>ros_pytest</test_depend>
</package>
